backup-gmail 2012-2-28
  * Update progress only when fetch batches complete, not after every 
    message is queued or skipped

backup-gmail 2012-1-22
  * backup is now case-insensitive for --include 

backup-gmail 2012-1-18
  * add --match_regex for label filtering
  * add FilterLabels class to handle work of filtering
  * SaveMbox and RestoreGmail now use non-strict label exclusion by default
    and will recognize --strict_exclude
  * improve help strings
  
backup-gmail 2012-1-17
  * fix: RestoreGmail works around imaplib's Time2InternalDate function to 
    avoid sending non-RFC2822 dates to IMAP

backup-gmail 2012-1-14
  * fix: use BODY.PEEK to effect --keep_status instead of manually unsetting
    \Seen. This fixes the behavior and is no longer a slow operation
  * method fetchRFC822Info(...) fetches MESSAGE-ID also, so a separate call
    to fetchMessageId(...) is not required
  
backup-gmail 2012-1-11.1
  * fix: also UTF-7 decode special folders

backup-gmail 2012-1-11
  * restore treats 'INBOX' as a special name even for non-English accounts
  * improve help string

backup-gmail 2012-1-10.1
  * improve help strings and gui labels

backup-gmail 2012-1-10
  * fix: restore can assign non-ASCII labels via UTF-7
  * restore by default restores to \AllMail; can restore to specified --label
  * restore no longer puts anything into \Inbox (unless explicit with --label)
  * remove redundant clearing of \Seen in backup if --keep_read_status

backup-gmail 2011-11-2
  * fix localized date handling for gui.py and command-line arguments of
    backup_gmail.py
  * fix gui.py to interact with backup_gmail strictly in utf-8
  * use imapUTF7 package to handle mailbox names with non-ASCII characters;
    (thanks to MXM at http://mxm-mad-science.blogspot.com/)

backup-gmail 2011-10-16-1
  * Since users can hide special folders in IMAP, treat them as
    optional to avoid KeyError
    
backup-gmail 0.2
  * Full and incremental backup are now the same operation, and re-running