@@ -1,3 +1,7 @@
+backup-gmail 2016-9-30
+  * restore fixes: log error and continue if IMAP append does not succeed
+    with OK. Avoid string index out of range on empty dates.
+
 backup-gmail 2012-2-28
   * Update progress only when fetch batches complete, not after every 
     message is queued or skipped
